@@ -2,7 +2,7 @@ package com.pacman.systemelements;
 
 import com.pacman.engine.DijkstraAlgorithm;
 import com.pacman.engine.GraphicManager;
-import com.pacman.engine.SystemManager;
+import com.pacman.engine.System;
 import com.pacman.engine.Vertex;
 import java.util.LinkedList;
 
@@ -45,7 +45,8 @@ public final class Ghost extends DynamicGameObject {
         setRigidBody(true);
         setPosition(position);
         setOldPosition(position);
-        getVelocity().setModulus(1);
+        setDimension(new Dimension(18, 18));
+        getVelocity().setModulus(50);
     }
 
     /**
@@ -91,16 +92,16 @@ public final class Ghost extends DynamicGameObject {
         }
 
         if (pathToTarget != null && !pathToTarget.isEmpty()) {
-            if (target.isOnFloor(pathToTarget.getLast().getT()) && isOnFloor(pathToTarget.getFirst().getT())) return;
+            if (target.isOnFloor(pathToTarget.getLast().getT())) return;
             else for (Vertex<Floor> vertex: pathToTarget) vertex.getT().highlighted = false; // temp
         }
 
         Floor floor, targetFloor;
 
-        floor = SystemManager.getArenaManager().getArena().getGameObjectFloorHashMap().get(this);
-        targetFloor = SystemManager.getArenaManager().getArena().getGameObjectFloorHashMap().get(target);
+        floor = Floor.getFloorFrom(this);
+        targetFloor = Floor.getFloorFrom(target);
 
-        DijkstraAlgorithm dijAlg = new DijkstraAlgorithm(SystemManager.getArenaManager().getGraph(), floor.getVertex());
+        DijkstraAlgorithm dijAlg = new DijkstraAlgorithm(System.getArenaManager().getGraph(), floor.getVertex());
         pathToTarget = dijAlg.getShortestPath(targetFloor.getVertex());
 
         for (Vertex<Floor> vertex: pathToTarget) vertex.getT().highlighted = true; // temp
@@ -113,34 +114,48 @@ public final class Ghost extends DynamicGameObject {
 
         if (pathToTarget.isEmpty()) return;
 
-        if (isCenteredOnFloor(pathToTarget.getFirst().getT())) {
+        if (pathToTarget.size() >= 2) {
 
-            pathToTarget.getFirst().getT().highlighted = false;
-            pathToTarget.removeFirst();
-            if (pathToTarget.isEmpty()) return;
+            double dX, dY;
+            dX = pathToTarget.get(1).getT().getPosition().getX() - pathToTarget.get(0).getT().getPosition().getX();
+            dY = pathToTarget.get(1).getT().getPosition().getY() - pathToTarget.get(0).getT().getPosition().getY();
 
-            double deltaX = pathToTarget.getFirst().getT().getPosition().getX() - getPosition().getX();
-            double deltaY = pathToTarget.getFirst().getT().getPosition().getY() - getPosition().getY();
+            if (dX > 0) changeDirectionTo(Velocity.Direction.RIGHT);
+            else if (dX < 0) changeDirectionTo(Velocity.Direction.LEFT);
+            else if (dY > 0) changeDirectionTo(Velocity.Direction.UP);
+            else if (dY < 0) changeDirectionTo(Velocity.Direction.DOWN);
 
-            if (deltaX > 0) getVelocity().setDirection(Velocity.Direction.RIGHT);
-            else if (deltaX < 0) getVelocity().setDirection(Velocity.Direction.LEFT);
-            else if (deltaY > 0) getVelocity().setDirection(Velocity.Direction.UP);
-            else if (deltaY < 0) getVelocity().setDirection(Velocity.Direction.DOWN);
+            if (isOnFloor(pathToTarget.get(1).getT())) {
+                pathToTarget.removeFirst();
+            }
         }
 
-        translate(GraphicManager.getDeltaTime());
+//        if (isOnFloor(pathToTarget.getFirst().getT())) {
+//
+//            pathToTarget.getFirst().getT().highlighted = false;
+//            pathToTarget.removeFirst();
+//            if (pathToTarget.isEmpty()) return;
+//
+//            double deltaX = pathToTarget.getFirst().getT().getPosition().getX() - getPosition().getX();
+//            double deltaY = pathToTarget.getFirst().getT().getPosition().getY() - getPosition().getY();
+//
+//            if (deltaX > 0) changeDirectionTo(Velocity.Direction.RIGHT);
+//            else if (deltaX < 0) changeDirectionTo(Velocity.Direction.LEFT);
+//            else if (deltaY > 0) changeDirectionTo(Velocity.Direction.UP);
+//            else if (deltaY < 0) changeDirectionTo(Velocity.Direction.DOWN);
+//
+//        }
+
+        translate(System.deltaTime);
     }
 
     @Override
     public void update() {
 
-        System.out.println("Ghost: " + getPosition());
-        System.out.println("Path: " + pathToTarget);
-
         switch (movement) {
 
             case RANDOM:
-                translate(GraphicManager.getDeltaTime());
+                translate(System.deltaTime);
                 break;
 
             case FOLLOW_TARGET:
@@ -155,11 +170,10 @@ public final class Ghost extends DynamicGameObject {
 
     @Override
     public void onCollision() {
-
     }
 
     @Override
     public void print() {
-        System.out.print("G");
+        java.lang.System.out.print("G");
     }
 }
